@@ -51,8 +51,7 @@
       </widget>
       <widget class="QWidget" name="tab_user">
        <attribute name="icon">
-        <iconset theme="street-view">
-         <normaloff>.</normaloff>.</iconset>
+        <iconset theme="street-view"/>
        </attribute>
        <attribute name="title">
         <string>My Data</string>
@@ -73,10 +72,10 @@
           <item>
            <spacer name="horizontalSpacer_2">
             <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+             <enum>Qt::Orientation::Horizontal</enum>
             </property>
             <property name="sizeType">
-             <enum>QSizePolicy::Fixed</enum>
+             <enum>QSizePolicy::Policy::Fixed</enum>
             </property>
             <property name="sizeHint" stdset="0">
              <size>
@@ -116,7 +115,7 @@
           <item>
            <spacer name="horizontalSpacer">
             <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+             <enum>Qt::Orientation::Horizontal</enum>
             </property>
             <property name="sizeHint" stdset="0">
              <size>
@@ -147,150 +146,9 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="tab_share">
-       <property name="enabled">
-        <bool>false</bool>
-       </property>
-       <attribute name="icon">
-        <iconset theme="people-arrows">
-         <normaloff>.</normaloff>.</iconset>
-       </attribute>
-       <attribute name="title">
-        <string>Sharing</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_5">
-        <item>
-         <widget class="QLabel" name="label">
-          <property name="text">
-           <string>You can share datasets with other users on DCOR via collections. Collections may contain private and public datasets.</string>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QSplitter" name="splitter">
-          <property name="sizePolicy">
-           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-            <horstretch>0</horstretch>
-            <verstretch>0</verstretch>
-           </sizepolicy>
-          </property>
-          <property name="orientation">
-           <enum>Qt::Horizontal</enum>
-          </property>
-          <widget class="QWidget" name="verticalLayoutWidget_2">
-           <layout class="QVBoxLayout" name="verticalLayout_2">
-            <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_5">
-              <property name="topMargin">
-               <number>0</number>
-              </property>
-              <item>
-               <widget class="QLabel" name="label_2">
-                <property name="text">
-                 <string>My Collections</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLineEdit" name="lineEdit_3">
-                <property name="placeholderText">
-                 <string>filter collections...</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </item>
-            <item>
-             <widget class="QListWidget" name="listWidget_2"/>
-            </item>
-           </layout>
-          </widget>
-          <widget class="QWidget" name="verticalLayoutWidget_3">
-           <layout class="QVBoxLayout" name="verticalLayout_3">
-            <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_7">
-              <item>
-               <widget class="QLabel" name="label_3">
-                <property name="text">
-                 <string>Datasets</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLineEdit" name="lineEdit_4">
-                <property name="placeholderText">
-                 <string>filter datasets...</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </item>
-            <item>
-             <widget class="QListWidget" name="listWidget_3"/>
-            </item>
-           </layout>
-          </widget>
-          <widget class="QWidget" name="verticalLayoutWidget">
-           <layout class="QVBoxLayout" name="verticalLayout_4">
-            <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_4">
-              <item>
-               <widget class="QLabel" name="label_4">
-                <property name="text">
-                 <string>Shared with</string>
-                </property>
-               </widget>
-              </item>
-              <item>
-               <widget class="QLineEdit" name="lineEdit_5">
-                <property name="placeholderText">
-                 <string>filter users...</string>
-                </property>
-               </widget>
-              </item>
-             </layout>
-            </item>
-            <item>
-             <widget class="QListWidget" name="listWidget"/>
-            </item>
-           </layout>
-          </widget>
-         </widget>
-        </item>
-        <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_2">
-          <item>
-           <widget class="QLabel" name="label_7">
-            <property name="text">
-             <string>Add user to selected collection(s):</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLineEdit" name="lineEdit_2">
-            <property name="placeholderText">
-             <string>type a name...</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QToolButton" name="toolButton_3">
-            <property name="text">
-             <string>Add</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-       </layout>
-      </widget>
       <widget class="QWidget" name="tab_upload">
        <attribute name="icon">
-        <iconset theme="upload">
-         <normaloff>.</normaloff>.</iconset>
+        <iconset theme="upload"/>
        </attribute>
        <attribute name="title">
         <string>Uploads</string>
@@ -319,8 +177,7 @@
       </widget>
       <widget class="QWidget" name="tab_download">
        <attribute name="icon">
-        <iconset theme="download">
-         <normaloff>.</normaloff>.</iconset>
+        <iconset theme="download"/>
        </attribute>
        <attribute name="title">
         <string>Downloads</string>
@@ -345,8 +202,7 @@
       </widget>
       <widget class="QWidget" name="tab_maintain">
        <attribute name="icon">
-        <iconset theme="broom">
-         <normaloff>.</normaloff>.</iconset>
+        <iconset theme="broom"/>
        </attribute>
        <attribute name="title">
         <string>Maintenance</string>
@@ -380,7 +236,7 @@
      <x>0</x>
      <y>0</y>
      <width>900</width>
-     <height>22</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
